name:               my-game
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , clay == 0.13.*
                  , text == 1.2.*
                  , hakyll == 4.12.*
                  , hakyll-images == 0.4.4
                  , filepath == 1.4.*
                  , pandoc >= 2.0.5 && < 2.8
  ghc-options:      -threaded
  default-language: Haskell2010
